--- a/products.html
+++ b/products.html
@@ -66,7 +66,7 @@
             <a href="index.html" class="logo">Online Shopping </a>
         </div>
         <div class="logout-box" style="margin-left: auto;">
-                    <a href="#" class="logout">logout</a>
+                    <a href="login.html" class="logout">logout</a>
                 </div>
       </nav>
         <div class=" container-box">
